// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls the callback 1`] = `
<Button
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "backgroundColor": "rgb(67, 114, 170)",
        "borderRadius": 6,
        "color": "#FFFFFF",
        "marginVertical": 10,
        "overflow": "hidden",
        "paddingVertical": 10,
        "width": 200,
      },
      false,
    ]
  }
>
  Push me!
</Button>
`;

exports[`calls the callback 2`] = `
<Button
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "backgroundColor": "rgb(67, 114, 170)",
        "borderRadius": 6,
        "color": "#FFFFFF",
        "marginVertical": 10,
        "overflow": "hidden",
        "paddingVertical": 10,
        "width": 200,
      },
      false,
    ]
  }
>
  Push me!
</Button>
`;

exports[`can change the title 1`] = `
<Button
  containerStyle={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#E3A025",
      "borderRadius": 6,
      "marginVertical": 10,
      "overflow": "hidden",
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  disabled={false}
  disabledContainerStyle={
    Object {
      "backgroundColor": "rgb(240, 239, 245)",
    }
  }
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "color": Object {
        "_a": 1,
        "_b": 33,
        "_format": "hex",
        "_g": 33,
        "_gradientType": undefined,
        "_ok": true,
        "_originalInput": "#242121",
        "_r": 36,
        "_roundA": 1,
        "_tc_id": 3,
      },
      "fontFamily": "System",
      "fontSize": 16,
      "fontWeight": "400",
      "letterSpacing": -0.32,
      "lineHeight": 21,
    }
  }
  styleDisabled={
    Object {
      "color": "rgb(142, 142, 147)",
    }
  }
>
  Title
</Button>
`;

exports[`renders 1`] = `
<Button
  containerStyle={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#E3A025",
      "borderRadius": 6,
      "marginVertical": 10,
      "overflow": "hidden",
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  disabled={false}
  disabledContainerStyle={
    Object {
      "backgroundColor": "rgb(240, 239, 245)",
    }
  }
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "color": Object {
        "_a": 1,
        "_b": 33,
        "_format": "hex",
        "_g": 33,
        "_gradientType": undefined,
        "_ok": true,
        "_originalInput": "#242121",
        "_r": 36,
        "_roundA": 1,
        "_tc_id": 3,
      },
      "fontFamily": "System",
      "fontSize": 16,
      "fontWeight": "400",
      "letterSpacing": -0.32,
      "lineHeight": 21,
    }
  }
  styleDisabled={
    Object {
      "color": "rgb(142, 142, 147)",
    }
  }
>
  Push me!
</Button>
`;
